# time-tracker

./: Cargo.toml  Dockerfile  docker-compose.yml
entities/: Cargo.toml
entities/src/: categories.rs  lib.rs  tracks.rs  users.rs
migration/: Cargo.toml
migration/src/: m20220101_000001_create_table.rs
src/: main.rs
